--- a/templates/login.html
+++ b/templates/login.html
@@ -1,39 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-6 offset-md-3">
-        <div class="card">
-            <div class="card-header">
-                <h4>Sign In</h4>
-            </div>
-            <div class="card-body">
-                <form method="post" novalidate>
-                    {{ form.hidden_tag() }}
-                    <div class="mb-3">
-                        {{ form.username.label(class="form-label") }}
-                        {{ form.username(class="form-control") }}
-                        {% for error in form.username.errors %}
-                        <div class="text-danger">{{ error }}</div>
-                        {% endfor %}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.password.label(class="form-label") }}
-                        {{ form.password(class="form-control") }}
-                        {% for error in form.password.errors %}
-                        <div class="text-danger">{{ error }}</div>
-                        {% endfor %}
-                    </div>
-                    <div class="d-grid gap-2">
-                        {{ form.submit(class="btn btn-primary") }}
-                    </div>
-                </form>
-                <div class="mt-3 text-center">
-                    <p>New to SimpleBankApp? <a href="{{ url_for('register') }}">Register here</a></p>
-                    <p><a href="{{ url_for('reset_password_request') }}">Forgot your password?</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="card-header">
+    <h4 class="login-title">Login</h4>
 </div>
-{% endblock %} 
+<form method="post" novalidate>
+    {{ form.hidden_tag() }}
+    <div class="mb-3 input-group">
+        <span class="input-icon"><i class="bi bi-person"></i></span>
+        {{ form.username(class="form-control", placeholder="Username or Email", style="padding-left:2.5rem;") }}
+    </div>
+    {% for error in form.username.errors %}
+        <div class="text-danger mb-2" style="margin-left:2.5rem;">{{ error }}</div>
+    {% endfor %}
+    <div class="mb-3 input-group">
+        <span class="input-icon"><i class="bi bi-lock"></i></span>
+        {{ form.password(class="form-control", placeholder="Password", id="password", style="padding-left:2.5rem; padding-right:2.5rem;") }}
+        <span class="input-password-toggle" onclick="togglePassword('password', this)">
+            <i class="bi bi-eye-slash"></i>
+        </span>
+    </div>
+    {% for error in form.password.errors %}
+        <div class="text-danger mb-2" style="margin-left:2.5rem;">{{ error }}</div>
+    {% endfor %}
+    <div class="text-start mt-2">
+        <a href="{{ url_for('reset_password_request') }}">Forgot Password?</a>
+    </div>
+    <div class="text-center mt-3">
+        {{ form.submit(class="btn btn-login w-auto mx-auto") }}
+    </div>
+    <div class="text-center mt-3">
+        <span class="text-muted" style="font-size:1rem;">
+            Don't have an account yet?
+            <a href="{{ url_for('register') }}">Sign Up</a>
+        </span>
+    </div>
+</form>
+{% endblock %}
