Enhance manager dropdown menu with dark theme and hover visibility

--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="managerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Manager
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="managerDropdown">
+                        <ul class="dropdown-menu dropdown-menu-dark show-on-hover" aria-labelledby="managerDropdown">
                             <li><a class="dropdown-item" href="{{ url_for('manager_dashboard') }}">Dashboard</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin_transactions') }}">Admin Audit</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('manager_transfers') }}">Transfers</a></li>
